answer button small position fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -393,13 +393,13 @@
 
 #loctestShowAnswerButton {
     position: absolute;   /*~~Positioning*/
-    padding: 10px 40px;
+    padding: 10px 0px 40px 0px;
     margin: 10px 0;
     vertical-align: top;
     line-height: 30px;
     text-align: center;
     right: 8%;    
-    width: 170px;
+    width: 100px;
     
     -webkit-border-radius: 7.5px;   /*~~Styling*/
     -moz-border-radius: 7.5px;
@@ -416,10 +416,10 @@
     width: 120px;
 }
 #label_name {
-    position: relative;
+    position: absolute;
     overflow: scroll;
     display: inline-block;
-    margin: 15px calc(8% + 170px) 15px calc(6.5% + 120px) !important;
+    margin: 15px calc(8% + 100px) 15px calc(6.5% + 120px) !important;
 }
 .toggle_show_btn, .toggle_show_btn > span {   /*This class gets toggled when a button is hovered over / clicked*/
     -webkit-transition: all .25s;   /*~~Animations*/
